# dashboard-queries-biomedical

./: .gitignore  .zenodo.json  CITATION.cff  Dockerfile  LICENSE  README.md  example_config.yaml  gcp_setup.sh  main.py  pyproject.toml
biomed/: README.md  config.py  gcp.py  logs.py  main.py  partner_workflow.py  queries.py
biomedical_dashboards/: README.md
biomedical_dashboards/biomed/: config.py  gcp.py  logs.py  main.py  partner_workflow.py  queries.py
biomedical_dashboards/queries/: dashboard_query1_alltrials.sql  dashboard_query2_trials.sql  dashboard_query2_trials.sql.jinja2  dashboard_query3_pubs.sql.jinja2  dashboard_view_latest.sql.jinja2  phase1_query3_pubs.sql  phase1_query4_orcid.sql
documentation/: 2023_flowcharts_HELLOWORLD.Rmd  BOS_flowcharts_NOLABELS.Rmd  BOS_flowcharts_WITHLABELS.Rmd  BOS_flowcharts_withlabels.Rmd  flowcharts.Rmd
queries/: PUBMED_Extract  clintrial_extract.sql  dashboard_query.sql  dashboard_query1_alltrials.sql  dashboard_query1_alltrials.sql.jinja2  dashboard_query2_trials.sql  dashboard_query2_trials.sql.jinja2  dashboard_query3_pubs.sql  dashboard_query3_pubs.sql.jinja2  dashboard_query4_orcid.sql  dashboard_query4_orcid.sql.jinja2  dashboard_query_orcid.sql  dashboard_query_pubs.sql  dashboard_query_trialdata  dashboard_query_trials.sql  dashboard_trialdata.sql  neuro_query1_pubmed.sql  neuro_query2_trials.sql  neuro_query3_pubs.sql  neuro_query4_orcid.sql  neuro_query_pubmed.sql  neuro_query_pubs.sql  neuro_query_trials.sql  phase1_query1_pubmed.sql  phase1_query3_pubs.sql
(+2 files in other folders)
