[project]
name = "biomedical-dashboards"
version = "0.1.0"
requires-python=">=3.11, <3.12"
description = ""
authors = [{ name = "Keegan", email = "keegan.smith@curtin.edu.au" }]
readme = "README.md"
dependencies = [
    "pyyaml>=6.0, <7",
    "jinja2>=3.0",
    "google-cloud-bigquery>=3.0, <4",
    "GitPython>=3.0, <4"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
# packages = ["biomedical_dashboards"]

[tool.setuptools.package-data]
"biomedical_dashboards.queries" = ["*.sql", "*.sql.jinja2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["biomedical_dashboards", "biomedical_dashboards.*"]

[project.scripts]
biomed = "biomedical_dashboards.biomed.main:main"


